SFDCProject/src/objects/Custom_Email_Template__c.object
<CustomObject>
    <description>Custom Email Templates</description>
    <fields>
        <fullName>Custom_Email_Template_Data__c</fullName>
        <label>Custom Email Template Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq_No__c</fullName>
        <label>Seq No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Type__c</columns>
        <columns>Seq_No__c</columns>
        <columns>Custom_Email_Template_Data__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Custom Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>